feat: sprint5 심화요구사항 구현